Fix spelling and clean up index.html
Corrected the spelling of 'Founder' and removed extra characters.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <img src="images.jpg" alt="globe">
   <h1>Symon Mokami</h1>
-  <p><em>Founer and CEO of <strong>Moktel</strong></em></p>
+  <p><em>Founder and CEO of <strong>Moktel</strong></em></p>
   <h2>Items</h2>
   <ul>
     <li>first item</li>
@@ -26,3 +26,4 @@
 </body>
 
 </html>
+
